# Worldcup_Rag_ChatBot

./: Langraph_diagram.ipynb  README.md  app.py  backend.py  chunked_worldcup_data.csv  pyproject.toml  requirements.txt  worldcup_data.csv  worldcup_data_generation_cleaned.ipynb  worldcup_embeddings.npy
